[tool.poetry]
name = "moodviemaker"
version = "0.1.0"
description = ""
authors = ["Daniel Meechan <git@public.dmeechan.com>", "Oliver Stenning <ostenning@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
opencv-python = "^4.5.4"
drawSvg = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
